--- a/bin/.env.example
+++ b/bin/.env.example
@@ -1,5 +1,5 @@
 PROJECT_ROOT='/workspace/terraform-beginner-bootcamp-2023'
-
 AWS_ACCESS_KEY_ID='AKIAIOSFODNN7EXAMPLE'
 AWS_SECRET_ACCESS_KEY='wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY'
 AWS_DEFAULT_REGION='ca-central-1'
+TERAFORM_CLOUD_TOKEN="YOUR_SECRET_TERRAFORM_TOKEN"
